# Fused-Convolutions

./: CMakeLists.txt  setup.py
bindings/: fftConvWrapper.cpp  fusedConvWrapper.cpp  gemmConvWrapper.cpp
include/: fftConv.cuh  fusedConv.cuh  fusedConv.h  gemmConv.cuh
python/: fftconv.py  fusedconv.py  gemmconv.py  typing.py
src/: basicUtils.cpp  fftConv.cu  fusedConv.cpp  fusedConv.cu  gemmConv.cu  generalKernels.cu  ptrTraits.cpp  tensorAccessor.cu
tests/: test.py
